Applies OpenRewrite upgrade-to-Java-11 recipes